<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.WelcomeActivity">


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/background_intro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="32dp"
                android:text="@string/welcome_back_to_n_englishtlu_app"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/women"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/login_button"
              style="@android:style/Widget.Button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="35dp"
              android:layout_marginEnd="32dp"
              android:background="@drawable/background_btn_1"
              android:text="@string/login"
              android:textAppearance="@style/TextAppearance.AppCompat.Large"
              android:textColor="#2f3363"
              android:textSize="22sp"
              android:textStyle="bold" />

          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/register_button"
              style="@android:style/Widget.Button"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="40dp"
              android:layout_marginEnd="32dp"
              android:layout_marginBottom="50dp"
              android:background="@drawable/background_btn_1"
              android:text="@string/sign_up"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="#2f3363"
              android:textSize="22sp"
              android:textStyle="bold" />
      </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>