<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.home.view.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@color/white"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hi"
                    android:textSize="25sp"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:text="@string/alex"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.312" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font1"
                    android:text="@string/what_would_you_like_to_learn_today_nsearch_bellow"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintHorizontal_bias="0.163"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView2"
                    android:layout_width="56dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/icon_profile_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.511"
                    app:shapeAppearance="@style/circular"
                    tools:ignore="ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edtext_background"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:drawablePadding="10dp"
                    android:elevation="10dp"
                    android:ems="10"
                    android:fontFamily="@font/font1"
                    android:hint="@string/search_for"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:textColorHint="#757575"
                    android:textSize="15sp"
                    tools:targetApi="p" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:iss_auto_cycle="true"
                    app:iss_corner_radius="20"
                    app:iss_delay="2000"
                    app:iss_period="2000"
                    app:iss_title_background="@drawable/background_btn_1" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font1"
                        android:text="All Course &amp; Feature"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="18sp"
                        tools:targetApi="p" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/font1"
                        android:text="@string/next"
                        android:textAlignment="viewEnd"
                        android:textColor="#0961F5"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_chevron_right_24"
                        />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="20dp"
                    android:clipToPadding="false"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>